@@ -3,14 +3,11 @@ GO_INSTALL=go install
 GO_TEST=go test
 GO_CLEAN=go clean
 
-all: update petname
-
-update:
-	./update.sh
+all: petname
 
 petname: petname.go cmd/petname/main.go
 	$(GO_BUILD)
-	GOPATH=$(shell pwd) $(GO_BUILD) -o debian/tmp/cmd/petname/petname cmd/petname/main.go
+	GOPATH=$(shell pwd) $(GO_BUILD) -o petname cmd/petname/main.go
 
 test: petname.go petname_test.go
 	GOPATH=$(shell pwd) $(GO_TEST)
