@@ -1,0 +1,1 @@
+petname /usr/lib/golang-petname/petname
