@@ -5,5 +5,7 @@ petname (1.0) unreleased; urgency=medium
     petname/petname.py, petname/petname.py.in, === removed directory
     petname, setup.py, update.sh:
     - rework to a golang only package, rename accordingly
+  * debian/golang-petname.install, Makefile:
+    - update build, install binary
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Sat, 13 Dec 2014 11:27:59 -0600
